--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>github.io</title>
 </head>
 <body>
     <h1>Hello World</h1>
-    <h2>Hello World</h2>
-    <h3>Hello World</h3>
 </body>
 </html>
